--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,22 @@ services: # 定义服务
     #      - JVM_MINIMUM_MEMORY=1g # JVM 最小内存
     #      - JVM_MAXIMUM_MEMORY=12g # JVM 最大内存
     #      - JVM_CODE_CACHE_ARGS='-XX:InitialCodeCacheSize=1g -XX:ReservedCodeCacheSize=8g' # JVM 代码缓存参数
-    depends_on: # 定义服务依赖
-      - mysql # 依赖 mysql 服务
+
+    # 定义服务依赖
+    depends_on: 
+      - postgres # 依赖 postgres 服务
     ports: # 映射端口
-      - "8090:8090" # 将宿主机的 8090 端口映射到容器的 8090 端口
+      - "80:8090" # 将宿主机的 8090 端口映射到容器的 8090 端口
     volumes: # 定义数据卷
       - home_data:/var/confluence # 将数据卷挂载到容器的 /var/confluence 目录
     restart: always # 设置容器始终重启策略
     networks: # 指定网络
       - network-bridge # 使用 network-bridge 网络
-  postgres: # 定义名为 postgres 的服务
+
+  # 定义名为 postgres 的服务
+  postgres: 
     image: postgres:15.4 # 使用 postgres 15.4 版本的镜像
-    container_name: pg-confluence # 容器名称
+    container_name: postgres-confluence # 容器名称
     healthcheck: # 健康检查配置
       test: ["CMD", "pg_isready", "-q", "-d", "postgres", "-U", "root"] # 检查 PostgreSQL 服务是否可用
       timeout: 45s # 健康检查的超时时间为 45 秒
@@ -45,7 +49,7 @@ services: # 定义服务
 networks: # 定义网络
   network-bridge: # 定义名为 network-bridge 的网络
     driver: bridge # 使用 bridge 驱动
-    
+
 volumes: # 定义数据卷
   home_data: # 定义名为 home_data 的数据卷
     external: false # 数据卷为内部创建
