--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3.4" # 定义 Docker Compose 文件的版本
 services: # 定义服务
   confluence: # 定义 confluence 服务
-    image: omaidb/confluence:9.2.1 # 使用的镜像及其版本
+    #  8.5.19 长期维护版本
+    #  9.2.1 最新版本
+    image: omaidb/confluence:8.5.19 # 使用的confluence长期维护版 镜像及其版本
     container_name: confluence-srv # 容器名称
     environment: # 设置环境变量
       - TZ=Asia/Shanghai # 设置时区为上海
