--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services: # 定义服务
     ports: # 映射端口
       - "80:8090" # 将宿主机的 8090 端口映射到容器的 8090 端口
     volumes: # 定义数据卷
+      ## /var/confluence/backups # confluence每日备份目录
       - home_data:/var/confluence # 将数据卷挂载到容器的 /var/confluence 目录
     restart: always # 设置容器始终重启策略
     networks: # 指定网络
