--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@
 services: # 定义服务
   confluence: # 定义 confluence 服务
     #  8.5.19 长期维护版本
+    #  8.9.8  长期支持8版本最新  haxqer/confluence:8.9.8
     #  9.2.1 最新版本
-    image: omaidb/confluence:8.5.19 # 使用的confluence长期维护版 镜像及其版本
+    image: omaidb/confluence:8.9.8 # 使用的confluence长期维护版 镜像及其版本
     container_name: confluence-srv # 容器名称
     environment: # 设置环境变量
       - TZ=Asia/Shanghai # 设置时区为上海
