--- a/docker-compose-mysql.yml
+++ b/docker-compose-mysql.yml
@@ -1,7 +1,9 @@
-
 services: # 定义服务
   confluence: # 定义 confluence 服务
-    image: omaidb/confluence:9.2.1 # 使用的镜像及其版本
+    #  8.5.19 长期维护版本
+    #  8.9.8  长期支持8版本最新  haxqer/confluence:8.9.8
+    #  9.2.1 最新版本
+    image: omaidb/confluence:8.9.8 # 使用的confluence长期维护版 镜像及其版本
     container_name: confluence-srv # 容器名称
     environment: # 设置环境变量
       - TZ=Asia/Shanghai # 设置时区为上海
@@ -11,7 +13,7 @@ services: # 定义服务
     depends_on: # 定义服务依赖
       - mysql # 依赖 mysql 服务
     ports: # 映射端口
-      - "8090:8090" # 将宿主机的 8090 端口映射到容器的 8090 端口
+      - "80:8090" # 将宿主机的 8090 端口映射到容器的 8090 端口
     volumes: # 定义数据卷
       - home_data:/var/confluence # 将数据卷挂载到容器的 /var/confluence 目录
     restart: always # 设置容器始终重启策略
@@ -29,7 +31,6 @@ services: # 定义服务
       - MYSQL_PASSWORD=123123 # 设置普通用户的密码
 
     command:
-      # - 'mysqld'                                    # 启动 MySQL 服务器进程
       # - '--character-set-server=utf8mb4'            # 设置服务器默认字符集为 utf8mb4 (支持完整Unicode，包括Emoji)
       # - '--collation-server=utf8mb4_bin'            # 设置服务器默认排序规则为 utf8mb4_bin (二进制排序，区分大小写)
       # - '--transaction-isolation=READ-COMMITTED'    # 设置默认事务隔离级别为 READ-COMMITTED (读已提交)
